# poxbase

./: README.md
backend/: Cargo.toml  icon_dot_burn.pep
backend/src/: assets.rs  error.rs  image.rs  main.rs  parser.rs
backend/src/db/: autoindex.rs  enum_table.rs  mod.rs  search.rs  table.rs
backend/src/types/: ability.rs  champ.rs  effect.rs  enums.rs  group.rs  mod.rs  rune_set.rs  tags.rs
frontend/: .gitignore  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  Footer.css  Footer.tsx  index.css  index.tsx  util.ts
frontend/src/components/: AbilityIcon.css  AbilityIcon.tsx  AbilityTable.css  AbilityTable.tsx  Blink.css  Blink.tsx  Button.css  Button.tsx  Dropdown.css  Dropdown.tsx  GameText.tsx  Header.css  Header.tsx  Icon.tsx  Input.css  Input.tsx  Label.css  Label.tsx  Page.css  Page.tsx  RuneDetails.css  RuneDetails.tsx  Spinner.css  Spinner.tsx  Typeahead.css  Typeahead.tsx  index.ts
frontend/src/components/runes/: AbstractRune.tsx  ChampionRune.tsx  EquipRune.tsx  RelicRune.tsx  Rune.css  SpellRune.tsx  index.ts
frontend/src/db/: DB.ts  enums.ts  index.ts  types.ts
frontend/src/pages/: AbilityPage.tsx  ChampionPage.tsx  EquipPage.tsx  RelicPage.tsx  SpellPage.tsx  index.ts
