[package]
name = "poxbase"
version = "0.1.0"
authors = ["Maciej Hirsz <hello@maciej.codes>"]
edition = "2018"
license = "GPL-3.0"
description = "PoxBase backend server"
repository = "https://github.com/maciejhirsz/poxbase"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = "3.3.0"
anyhow = "1.0"
arrayvec = { version = "0.5.2", features = ["serde"] }
clap = "3.0.0-beta.2"
futures = "0.3.8"
futures-util = "0.3.8"
regex = "1.4.2"
reqwest = { version = "0.10.8", features = ["stream"] }
rustc-hash = "1.1.0"
serde = "1.0"
serde_json = "1.0"
serde_repr = "0.1.6"
simple_logger = "1.11.0"
thiserror = "1.0"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
log = "0.4"

[profile.release]
panic = "abort"
